--- a/CppNative/CppNative.vcxproj
+++ b/CppNative/CppNative.vcxproj
@@ -20,18 +20,18 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{D4E2CF3F-0E40-4F6E-9678-DE2D4B05FA91}</ProjectGuid>
-    <RootNamespace>CppInteface</RootNamespace>
+    <ProjectGuid>{E31CF140-F968-4AAB-BC60-D008B7149815}</ProjectGuid>
+    <RootNamespace>Native</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>CppWrapper</ProjectName>
+    <ProjectName>CppNative</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
-    <CLRSupport>true</CLRSupport>
+    <CLRSupport>false</CLRSupport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -76,7 +76,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>false</SDLCheck>
+      <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
   </ItemDefinitionGroup>
@@ -117,18 +117,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="CppWrapper.h" />
+    <ClInclude Include="Native.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CppWrapper.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CppInterface\CppInterface.vcxproj">
-      <Project>{afc3ab4d-15c9-4567-a26f-23d69c1516db}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Native\Native.vcxproj">
-      <Project>{e31cf140-f968-4aab-bc60-d008b7149815}</Project>
-    </ProjectReference>
+    <ClCompile Include="Native.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
